Nav and footer color changes and extra margin settings

--- a/M2-D5/styleindex.css
+++ b/M2-D5/styleindex.css
@@ -4,6 +4,10 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+nav{
+  background-color: #141414;
+}
+
 .footer-list {
   color: white;
   list-style: none;
@@ -16,7 +20,7 @@ body {
 
 .footer {
   box-sizing: border-box;
-  background-color: #1c1e20;
+  background-color: #141414;
   margin: auto;
   padding-top: 64px;
   padding-bottom: 128px;
