Footer fixed, and folder organized

--- a/M2-D5/css/styleMainHome.css
+++ b/M2-D5/css/styleMainHome.css
@@ -13,7 +13,8 @@ h2{
 }
 button{
     color: white !important;
-    margin-top:5px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     size: 25px 54px;
     
 
