--- a/M2-D5/css/styleNav_Footer.css
+++ b/M2-D5/css/styleNav_Footer.css
@@ -43,8 +43,8 @@ h6 {
 }
 .footer-icon {
   margin-left: 2rem;
-  padding-bottom: 20px;
   padding-right: 20;
+  margin-bottom: 4rem;
 }
 
 .marginExtra {
