TV shows menu fixed

--- a/M2-D5/css/styleMainHome.css
+++ b/M2-D5/css/styleMainHome.css
@@ -8,8 +8,13 @@ h1{
     margin-top: 7px;
     display: inline-block;
 }
-h2{
+
+.section-title {
     color: white;
+    margin-left: 2rem;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+
 }
 button{
     color: white !important;
@@ -28,18 +33,72 @@ button{
     padding: 2px;
     background-color: #0f171e;
 }
-.fas fa-bars{
-    background-color: white;
-}
 
 .iconAdjust{
-    color: white;
+    color: rgb(136, 135, 135);
     margin-top: 10px;
+}
 
+.iconAdjust:last-child{
+    margin-left: 2rem;
 }
 
 .marginAdjust{
     margin-left: 20px;
+}
+
+.row-cards{
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
+.btn-genre{
+    margin-left: 2rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    vertical-align: middle;
+
+}
+
+.btn-genre > button {
+    background-color: transparent;
+    border-radius: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.genre {
+    display: flex;
+    align-items: center;
+}
+
+
+@media (max-width: 768px) { 
+    .card{
+        margin-bottom: 1rem !important;
+    }
+
+    .row-cards{
+        margin-left: 1rem;
+        margin-right: 1rem;
+
+    }
+    .section-title {
+        margin-left: 1rem;
+    }
+
+}   
+
+
+@media (max-width: 447px) {
+    .btn-genre {
+        margin: 0px;
+    }
+
+    .genre{
+        display: inline-block;
+    }
+
 }
    
 
